--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Staff AI Engineer
+title: "ankitsharma.github.io"
 description: >
   Experienced Staff AI Engineer with over 6 years in AI, Machine Learning, and Deep Learning. Proven track record in
   leading cutting-edge projects in generative AI, NLP, and system optimization, improving performance by up to 40%. 
